grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
   - hosts:
       - grafana.domain.com
     secretName: domain-com
  rules:
   - host: grafana.domain.com
     http:
       paths:
        - path: /
          backend:
           serviceName: grafana
           servicePort: 80
